@@ -522,7 +522,7 @@ div.title_line {
 	color: #fff;
 }
 #menu_tab li:hover a {
-	background: #b2b08a url("../images/arrow.png") no-repeat right 3px;
+	background: #b2b08a url("../../images/arrow.png") no-repeat right 3px;
 }
 #menu_tab li:hover ul a, #menu_tab .mn ul {
 	background: #db6351;
